/*
    gRPC protocal buffer
*/

syntax = "proto3";

package authentication;

// AuthenticationGreeter a greeter for authenticating
service AuthenticationGreeter {
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc Logout (LogoutRequest) returns (LogoutResponse) {}
}

/* message interfaces here */
message LoginRequest {
    string Account = 1;
    string Password = 2;
}

message LoginResponse {
    string Msg = 1;
    string Token = 2; // JWT token string
}

message LogoutRequest {
    string Token = 1; // JWT token string
}

message LogoutResponse {
    string Msg = 1;
}




